--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "next": "10.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
