--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fluentui/react": "^8.8.0",
     "dotenv": "^8.2.0",
     "next": "10.1.2",
     "react": "17.0.2",
