--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.8.0",
+    "@types/react-dom": ">=16.8.0",
     "dotenv": "^8.2.0",
     "next": "10.1.2",
     "react": "17.0.2",
