--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@material-ui/core": "^4.11.3",
     "@types/react-dom": ">=16.8.0",
     "dotenv": "^8.2.0",
-    "next": "10.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
